# ModelCache

./: .gitignore  Dockerfile  LICENSE  README.md  README_CN.md  README_EN.md  README_JP.md  docker-compose.yaml  fastapi4modelcache.py  fastapi4modelcache_demo.py  flask4modelcache.py  flask4modelcache_demo.py  flask4multicache.py  flask4multicache_demo.py  modelcache_serving.py  mulicache-readme-cn.md  multicache_serving.py  pyproject.toml  requirements.txt  websocket4modelcache.py  websocket4modelcache_demo.py
data/milvus/: user.yaml
data/mysql/: my.conf
docs/: 1.what-is-model-cache.md  2.model-cache-features.md  3.model-cache-quick-start.md  4.create-cache.md
docs/script/: get_input_embedding_script.py
examples/: __init__.py
examples/embedding/: huggingface_tei_example.py
examples/flask/: data_insert.py  data_query.py  data_query_long.py  register.py
model/: .gitignore  clone_model_repository.bat  download_bert_embedder.bat
model/clip_zh/: __init__.py
model/text2vec-base-chinese/: config.json  logs.txt  modules.json  sentence_bert_config.json  tokenizer_config.json
modelcache/: __init__.py  cache.py  core.py
modelcache/adapter/: adapter.py  adapter_insert.py  adapter_query.py  adapter_register.py  adapter_remove.py
modelcache/adapter_mm/: adapter.py  adapter_insert.py  adapter_register.py
modelcache/config/: chromadb_config.ini  milvus_config.ini  mysql_config.ini  redis_config.ini
modelcache/embedding/: __init__.py  base.py  bge_m3.py  clip.py  clip_demo.py  data2vec.py  embedding_dispatcher.py  fasttext.py  huggingface.py  huggingface_tei.py  llmEmb.py  mpnet_base.py  paddlenlp.py  string_text.py  text_embeddings_inference.py
modelcache/manager/: __init__.py  data_manager.py  eviction_manager.py  factory.py
modelcache/manager_mm/: __init__.py  data_manager.py  factory.py
modelcache/processor/: pre.py
modelcache/similarity_evaluation/: base.py  distance.py  exact_match.py
modelcache_mm/: __init__.py  config.py  core.py  report.py
reference_doc/: create_table.sql
tests/: conftest.py  test_arc_cache.py  test_setup_validation.py  test_wtinylfu_cache.py
(+99 files in other folders)
